--- a/agentforcedx/specs/agentSpec.yaml
+++ b/agentforcedx/specs/agentSpec.yaml
@@ -1,18 +1,21 @@
 agentType: customer
-companyName: AgentforceDX
-companyDescription: A Salesforce company focused on Agentforce Development
-role: Agentforce Legend Certification
+companyName: Coral Cloud Resorts
+companyDescription: Coral Cloud Resorts provides customers with exceptional
+  destination activities, unforgettable experiences, and reservation services,
+  all backed by a commitment to top-notch customer service.
+role: The resort manager fields customer complaints, manages employee schedules,
+  and generally makes sure everything is working smoothly.
 maxNumOfTopics: 5
 enrichLogs: false
 tone: casual
 topics:
-  - name: Agent Performance Analytics
-    description: Monitor and analyze agent productivity metrics.
-  - name: Customer Interaction Insights
-    description: Provide insights from customer-agent interactions.
-  - name: Automated Case Assignment
-    description: Assign cases to agents based on predefined criteria.
-  - name: Knowledge Base Optimization
-    description: Enhance the accessibility of knowledge base articles.
-  - name: Proactive Issue Resolution
-    description: Identify and address potential issues before escalation.
+  - name: Customer Complaint Handling
+    description: Automate the logging and categorization of customer complaints.
+  - name: Employee Schedule Management
+    description: Streamline the creation and adjustment of employee schedules.
+  - name: Activity Reservation Assistance
+    description: Provide support for booking and managing destination activities.
+  - name: Service Quality Monitoring
+    description: Track and report on customer service metrics and feedback.
+  - name: Inventory Status Updates
+    description: Monitor and notify about resort inventory levels in real time.
